[package]
name = "day4"
version = "0.1.0"
authors = ["Jeramy Rutley <jrutley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textfilereader = { path = "../textfilereader" }
validator = { version = "0.12.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.4.2"
